html and css modified

--- a/etc_Voyager.html
+++ b/etc_Voyager.html
@@ -56,7 +56,7 @@
 </HEAD>
 
 <BODY id="common-k">
-    <div id="main920"></div>
+    <div id="main920"><!--</div>-->
 <!-- -->
     <header>
         <a name="page_top"></a>
@@ -88,7 +88,7 @@
 
         <!-- contents -->
         <div class="pic-left920 pb40">
-            <!--<div class="pb30" style="line-height:160%">-->
+            <!--<div class="pb30" style="line-height:180%">-->
             <div class="pb30">
                 <p class="pb10">
                     <a id="p1" class="hover-link2" href="https://www.youtube.com/watch?v=FXMDENxVjBY" target="_blank">
@@ -953,5 +953,6 @@
     <a id="popup-link" href="#" target="_blank">詳細を見る</a>
 </div>
 
+</div>
 </BODY>
 </html>
