html jp, en and css modified

--- a/etc_Voyager.html
+++ b/etc_Voyager.html
@@ -56,7 +56,7 @@
 </HEAD>
 
 <BODY id="common-k">
-    <div id="main920"><!--</div>-->
+    <div id="main920" style="line-height:180%"><!--</div>-->
 <!-- -->
     <header>
         <a name="page_top"></a>
