--- a/etc_Voyager_en.html
+++ b/etc_Voyager_en.html
@@ -55,15 +55,15 @@
     <!-- js end -->
 </HEAD>
 
-<BODY id="common-k">
-    <div id="main920"></div>
+<BODY id="common-k_en">
+    <div id="main920" style="line-height:180%"><!--</div>-->
 
     <header>
         <a name="page_top"></a>
         <div class="header_label920">
             <nav>
                 <IMG src="image/top/Contrail_g.png" alt ="Contrail logo" height="20" class="logo_img">
-                <ul class="menu" >
+                <ul class="menu_en" >
                     <li class="pb40"><a href="index.html" class="menulink">Home</a></li>
                     <li class="pb40"><a href="whatnew.html" class="menulink">What's New</a></li>
                     <li class="pb40"><a href="etc.html" class="menulink">E.T.C.</a></li>
@@ -1089,7 +1089,7 @@
 
         <hr id="footer"> <!-- horizontal partition -->
 
-        <p id="page-top"><a href="#">to TOP</a></p>
+        <p id="page-top"><a href="#">TOP</a></p>
         <div class="jQ_change center" > <!-- select button whole: start -->
             <p id="footer"> <!-- select button: start -->
                 <a href="etc.html">
@@ -1118,5 +1118,6 @@
     <a id="popup-link" href="#" target="_blank">View details</a>
 </div>
 
+</div>
 </BODY>
 </html>
