html, css modified

--- a/etc_Voyager.html
+++ b/etc_Voyager.html
@@ -55,7 +55,7 @@
     <!-- js end -->
 </HEAD>
 
-<BODY id="common-k">
+<BODY id="common-k_920">
     <div id="main920" style="line-height:180%"><!--</div>-->
 <!-- -->
     <header>
