--- a/etc_Voyager_en.html
+++ b/etc_Voyager_en.html
@@ -55,7 +55,7 @@
     <!-- js end -->
 </HEAD>
 
-<BODY id="common-k_en">
+<BODY id="common-k_920">
     <div id="main920" style="line-height:180%"><!--</div>-->
 
     <header>
@@ -63,7 +63,7 @@
         <div class="header_label920">
             <nav>
                 <IMG src="image/top/Contrail_g.png" alt ="Contrail logo" height="20" class="logo_img">
-                <ul class="menu_en" >
+                <ul class="menu" >
                     <li class="pb40"><a href="index.html" class="menulink">Home</a></li>
                     <li class="pb40"><a href="whatnew.html" class="menulink">What's New</a></li>
                     <li class="pb40"><a href="etc.html" class="menulink">E.T.C.</a></li>
