--- a/index.html
+++ b/index.html
@@ -1,20 +1,25 @@
 <!DOCTYPE html>
-<html lang="ja">
+<html lang="jp">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Redirecting...</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script>
-    // ページ読み込み時に実行
-    window.onload = function() {
-      const random = Math.floor(Math.random() * 100000); // 乱数生成（キャッシュ対策）
-      const targetUrl = `etc_Voyager.html?cache_buster=${random}`;
-      // 即座にリダイレクト
-      window.location.href = targetUrl;
-    };
+    const ua = navigator.userAgent;
+    const isMobile = /iPhone|iPad|iPod|Android/i.test(ua);
+
+    if (isMobile) {
+      window.location.href = "index_s.html";
+    } else {
+      window.location.href = "index_p.html";
+    }
   </script>
 </head>
 <body>
-  <p>自動的に <a id="redirect-link" href="etc_Voyager.html">etc_Voyager.html</a> に移動します。</p>
+  <noscript>
+    JavaScriptが無効になっています。<br>
+    <a href="index_p.html">PC向けページはこちら</a><br>
+    <a href="index_s.html">スマホ向けページはこちら</a>
+  </noscript>
 </body>
 </html>
