test_1st_correct_ok

--- a/etc_Voyager.html
+++ b/etc_Voyager.html
@@ -927,7 +927,7 @@
     <footer>
         <hr id="footer"> <!-- horizontal partition -->
 
-        <p id="page-top"><a href="#">トップへ</a></p>
+        <p id="page-top"><a href="#">トップ</a></p>
         <div class="jQ_change center" > <!-- select button whole: start -->
             <p id="footer"> <!-- select button: start -->
                 <a href="etc.html">
