--- a/index_s.html
+++ b/index_s.html
@@ -15,7 +15,7 @@
 
     <!-- css start -->
         <!-- kko_etc start -->
-        <link rel="stylesheet" href="kko_index_style_s.css" type="text/css" >
+        <link rel="stylesheet" href="kko_index_style_s.css">
         <!-- kko_etc end -->
     <!-- css end -->
 
@@ -24,27 +24,7 @@
         <!-- jQuery start -->
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
-            <!-- マウスオーバーまでloadされない非表示画像の先読み -->
-            <!-- IE7 以下は through -->
-            <script>
-/*            $(function(){
-                jQuery.preloadImages = function(){
-                    for(var i = 0; i<arguments.length; i++){
-                        jQuery("<img>").attr("src", arguments[i]);
-                    }
-                };
-                $.preloadImages(
-                    "image/top/en_what_on.gif",
-                    "image/top/en_link_on.gif",
-                    "image/top/en_scenery_on.gif",
-                    "image/top/jp_link_on.gif",
-                    "image/top/jp_optics_on.gif"
-                );
-            });
-*/            </script>
-
             <!--<script src="jq_kko_style.js"></script>-->
-            <!-- kko_style end -->
 
             <!-- jquery.cycle start - random image change, effects -->
             <script src="libs/jQuery/cycle/js/jquery.cycle.all.js"></script>
@@ -79,7 +59,7 @@
             </p>
 
             <div class="grid2">
-                <div class="grid-item">
+                <div class="grid-item1">
                     <p class="index_je" >
                         English
                     </p>
@@ -89,7 +69,7 @@
                             <li>
                                 <div class="nav-left">
                                     <a href="e_whatnew.html" >
-                                        <IMG class="nav-left-img" src="image/top/en_what_off.gif" width="130" border="0" alt="What's New" >
+                                        <IMG class="nav-left-img" src="image/top/en_what_off.gif" width="100" border="0" alt="What's New" >
                                     </a>
                                 </div>
                                 <div class="nav-right-s"></div>
@@ -98,7 +78,7 @@
                             <li>
                                 <div class="nav-left">
                                     <a href="e_link01.html" >
-                                        <IMG class="nav-left-img" src="image/top/en_link_off.gif" width="130" border="0" alt="Links" >
+                                        <IMG class="nav-left-img" src="image/top/en_link_off.gif" width="100" border="0" alt="Links" >
                                     </a>
                                 </div>
                                 <!-- <div class="nav-right-s"><IMG class="nav-right-img" src="image/button/new_b.gif" width="52" height="13" ></div> -->
@@ -108,17 +88,17 @@
                             <li>
                                 <div class="nav-left">
                                     <a href="en_etc.html" >
-                                        <IMG class="nav-left-img" src="image/top/jp_etc_off.gif" width="130" border="0" alt="etc." >
+                                        <IMG class="nav-left-img" src="image/top/jp_etc_off.gif" width="100" border="0" alt="etc." >
                                     </a>
                                 </div>
-                                <div class="nav-right-s"><IMG class="nav-right-img" src="image/button/new_b.gif" width="46" height="13" ></div>
-                                <!--<div class="nav-right-s"><IMG class="nav-right-img" src="image/button/update.gif" width="52" height="13" ></div>-->
+                                <!--<div class="nav-right-s"><IMG class="nav-right-img" src="image/button/new_b.gif" width="36px"></div>-->
+                                <div class="nav-right-s"><IMG class="nav-right-img" src="image/button/update.gif" width="42"></div>
                                 <div class="c-both"></div>
                             </li>
                             <li>
                                 <div class="nav-left">
                                     <a href="e_fs01.html" >
-                                            <IMG class="nav-left-img" src="image/top/en_scenery_off.gif" width="130" border="0" alt="The Scenery" >
+                                            <IMG class="nav-left-img" src="image/top/en_scenery_off.gif" width="100" border="0" alt="The Scenery" >
                                     </a>
                                 </div>
                                 <!-- <div class="nav-right-m"><IMG class="nav-right-img" src="image/button/new_b.gif" width="52" height="13" ></div> -->
@@ -128,7 +108,7 @@
                         </ul> <!-- navigation English: end -->
                     </div> <!-- text color change mouse over: end -->
                 </div>
-                <div class="grid-item">
+                <div class="grid-item2">
                     <p class="index_je" >
                         Japanese
                     </p>
@@ -138,7 +118,7 @@
                             <li>
                                 <div class="nav-left">
                                     <a href="whatnew.html" >
-                                        <IMG class="nav-left-img" src="image/top/en_what_off.gif" width="130" border="0" alt="What's New" >
+                                        <IMG class="nav-left-img" src="image/top/en_what_off.gif" width="100" border="0" alt="What's New" >
                                     </a>
                                 </div>
                                 <div class="nav-right-s"></div>
@@ -147,7 +127,7 @@
                             <li>
                                 <div class="nav-left">
                                     <a href="link01.html" >
-                                        <IMG class="nav-left-img" src="image/top/jp_link_off.gif" width="130" border="0" alt="リンク" >
+                                        <IMG class="nav-left-img" src="image/top/jp_link_off.gif" width="100" border="0" alt="リンク" >
                                     </a>
                                 </div>
                                 <!-- <div class="nav-right-s"><IMG class="nav-right-img" src="image/button/new_b.gif" width="52" height="13" ></div> -->
@@ -157,17 +137,17 @@
                             <li>
                                 <div class="nav-left">
                                     <a href="etc.html" >
-                                        <IMG class="nav-left-img" src="image/top/jp_etc_off.gif" width="130" border="0" alt="etc." >
+                                        <IMG class="nav-left-img" src="image/top/jp_etc_off.gif" width="100" border="0" alt="etc." >
                                     </a>
                                 </div>
-                                <!-- <div class="nav-right-s"><IMG class="nav-right-img" src="image/button/new_b.gif" width="46" height="13" ></div> -->
-                                <div class="nav-right-s"><IMG class="nav-right-img" src="image/button/update.gif" width="52" height="13" ></div>
+                                <!-- <div class="nav-right-s"><IMG class="nav-right-img" src="image/button/new_b.gif" width="42" height="13" ></div> -->
+                                <div class="nav-right-s"><IMG class="nav-right-img" src="image/button/update.gif" width="42"></div>
                                 <div class="c-both"></div>
                             </li>
                             <li>
                                 <div class="nav-left">
                                     <a href="fs01.html" >
-                                        <IMG class="nav-left-img" src="image/top/en_scenery_off.gif" width="130" border="0" alt="The Scenery" >
+                                        <IMG class="nav-left-img" src="image/top/en_scenery_off.gif" width="100" border="0" alt="The Scenery" >
                                     </a>
                                 </div>
                                 <!-- <div class="nav-right-m"><IMG class="nav-right-img" src="image/button/new_b.gif" width="52" height="13" ></div> -->
@@ -181,100 +161,97 @@
 
         </div> <!-- table left: end -->
 
+
         <!--<div id="table_right">--> <!-- table right: start -->
-        <div>
-            <p id="main_pic">
-                <IMG src="image/top/kko_Top_Image_spring_crop.jpg" width="360px" border="0" alt="Contrail Page TOP PICTURE">
-                <!-- <IMG src="image/top/kko_Top_Image_summer_crop.jpg" width="512" height="384" border="0" alt="Contrail Page TOP PICTURE"> -->
-                <!-- <IMG src="image/top/kko_Top_Image_aki_crop.jpg"    width="512" height="359" border="0" alt="Contrail Page TOP PICTURE"> -->
-                <!-- <IMG src="image/top/kko_Top_Image_Xmas_crop.jpg"   width="512" height="384" border="0" alt="Contrail Page TOP PICTURE"> -->
-                <!-- <IMG src="image/top/kko_Top_Image_winter_crop.jpg" width="512" height="384" border="0" alt="Contrail Page TOP PICTURE"> -->
-                <!-- <IMG src="image/top/kko_Top_Image_D51_crop.jpg"    width="512" height="384" border="0" alt="Contrail Page TOP PICTURE"> -->
-                <!-- <IMG src="image/top/TuamotuCompletion1.jpg"       width="512" height="384" border="0" alt="Contrail Page TOP PICTURE"> -->
-                <!-- <IMG src="image/top/TuamotuCompletion2.jpg"       width="512" height="384" border="0" alt="Contrail Page TOP PICTURE"> -->
-                <!-- <IMG src="image/top/FSX-SWIJ_512.jpg"             width="512" height="370" border="0" alt="Contrail Page TOP PICTURE"> -->
-                <!-- comment -->
-                <!-- <B>South Weat Islands in Japan for Flight Simulator X, now preparing...</B> -->
-                <!-- only this time -->
-            </p>
+        <p id="main_pic">
+            <IMG src="image/top/kko_Top_Image_spring_crop.jpg" width="320px" border="0" alt="Contrail Page TOP PICTURE">
+            <!-- <IMG src="image/top/kko_Top_Image_summer_crop.jpg" width="512" height="384" border="0" alt="Contrail Page TOP PICTURE"> -->
+            <!-- <IMG src="image/top/kko_Top_Image_aki_crop.jpg"    width="512" height="359" border="0" alt="Contrail Page TOP PICTURE"> -->
+            <!-- <IMG src="image/top/kko_Top_Image_Xmas_crop.jpg"   width="512" height="384" border="0" alt="Contrail Page TOP PICTURE"> -->
+            <!-- <IMG src="image/top/kko_Top_Image_winter_crop.jpg" width="512" height="384" border="0" alt="Contrail Page TOP PICTURE"> -->
+            <!-- <IMG src="image/top/kko_Top_Image_D51_crop.jpg"    width="512" height="384" border="0" alt="Contrail Page TOP PICTURE"> -->
+            <!-- <IMG src="image/top/TuamotuCompletion1.jpg"       width="512" height="384" border="0" alt="Contrail Page TOP PICTURE"> -->
+            <!-- <IMG src="image/top/TuamotuCompletion2.jpg"       width="512" height="384" border="0" alt="Contrail Page TOP PICTURE"> -->
+            <!-- <IMG src="image/top/FSX-SWIJ_512.jpg"             width="512" height="370" border="0" alt="Contrail Page TOP PICTURE"> -->
+            <!-- comment -->
+            <!-- <B>South Weat Islands in Japan for Flight Simulator X, now preparing...</B> -->
+            <!-- only this time -->
+        </p>
 
-            <p id="logo2" >
-                THE SCENERY
-            </p>
+        <p id="logo2" >
+            THE SCENERY
+        </p>
 
-            <div id="three-col" >
-                <div id="s3" class="col_upper_rl pics" > <!-- left side -->
-                    <!-- jQuery cycle -->
-                    <IMG src="image/fs/rangiroa/thumb_Rangiroa2004_03c.jpg"         width="256" alt="Screen Shots Top Image">
-                    <IMG src="image/fs/tuamotu/thumb_tuamotu_b_Anaa_SC01.jpg"       width="256" alt="Screen Shots Tuamotu 2005 Top Image">
-                    <IMG src="image/fs/butterfly/thumb_ButterflySC01.jpg"           width="256" alt="Screen Shots Butterfly 2004 Top Image">
-                    <IMG src="image/fs/aqua/TBS2k5.jpg"                             width="386" alt="Screen Shots Tokyo Bay 2005 Top Image">
-                    <IMG src="image/fs/midway/thumb_Midway2004.jpg"                 width="256" alt="Screen Shots Midway 2004 Top Image">
-                    <IMG src="image/fs/ss/thumb_Adriano_0.jpg"                      width="256" alt="Screen Shots Adriano Top Image">
-                    <IMG src="image/fs/leeward/thumb_2k4_LeeWard_BoraBora_SC03.jpg" width="256" alt="Screen Shots LeeWard 2004 Top Image">
-                    <IMG src="image/fs/swijx/thumb/13_Kume04_1268_256.jpg"          width="256" alt="Screen Shots SWIJX Top Image">
-                </div>
-                <div class="col_upper_c" >
-                    <p class="">
-                        GALLERY
-                    </p>
-                </div>
-                <div id="s4" class="col_upper_rl pics" > <!-- right side -->
-                    <!-- jQuery cycle -->
-                    <IMG src="image/fs/ss/thumb_YOSEMITE11.jpg"              width="256" alt="snap Shots Top Image">
-                    <IMG src="image/fs/kko/thumb_Rangiroa_03_yuubin_post.jpg" width="256" alt="snap Shots Ufufu Top image">
-                    <IMG src="image/fs/kko/thumb_4seasons01.jpg"              width="256" alt="snap Shots 4seasons Top Image">
-                    <IMG src="image/fs/kko/thumb_P1040286_IDC800.jpg"         width="256" alt="snap Shots Sky in the Sky Top Image">
-                    <IMG src="image/fs/kko/thumb_SW_P1040919.jpg"             width="256" alt="snap Shots Sea World Top Image">
-                    <IMG src="image/omihosan/thumb_suiboku_gondola.jpg"      width="256" alt="snap Shots Suiboku-ga Top Image">
-                </div>
+        <div class="three-col" >
+            <div id="s3" class="col_upper_rl pics" > <!-- left side -->
+                <!-- jQuery cycle -->
+                <IMG src="image/fs/rangiroa/thumb_Rangiroa2004_03c.jpg"          alt="Screen Shots Top Image">
+                <IMG src="image/fs/tuamotu/thumb_tuamotu_b_Anaa_SC01.jpg"        alt="Screen Shots Tuamotu 2005 Top Image">
+                <IMG src="image/fs/butterfly/thumb_ButterflySC01.jpg"            alt="Screen Shots Butterfly 2004 Top Image">
+                <IMG src="image/fs/aqua/TBS2k5.jpg"                              alt="Screen Shots Tokyo Bay 2005 Top Image">
+                <IMG src="image/fs/midway/thumb_Midway2004.jpg"                  alt="Screen Shots Midway 2004 Top Image">
+                <IMG src="image/fs/ss/thumb_Adriano_0.jpg"                       alt="Screen Shots Adriano Top Image">
+                <IMG src="image/fs/leeward/thumb_2k4_LeeWard_BoraBora_SC03.jpg"  alt="Screen Shots LeeWard 2004 Top Image">
+                <IMG src="image/fs/swijx/thumb/13_Kume04_1268_256.jpg"           alt="Screen Shots SWIJX Top Image">
             </div>
-            <div id="three-col" >
-                <div class="col_lower_rl" > <!-- left side -->
-                    <p class="border-ccc">
-                        FLT. SIM.
-                    </p>
-                </div>
-                <div class="col_lower_c" >
-                    <p class="">
-                    </p>
-                </div>
-                <div class="col_lower_rl" > <!-- right side -->
-                    <p class="border-ccc">
-                        PHOTO
-                    </p>
-                </div>
+            <div class="col_upper_c" >
+                GALLERY
             </div>
+            <div id="s4" class="col_upper_rl pics" > <!-- right side -->
+                <!-- jQuery cycle -->
+                <IMG src="image/fs/ss/thumb_YOSEMITE11.jpg"                alt="snap Shots Top Image">
+                <IMG src="image/fs/kko/thumb_Rangiroa_03_yuubin_post.jpg"  alt="snap Shots Ufufu Top image">
+                <IMG src="image/fs/kko/thumb_4seasons01.jpg"               alt="snap Shots 4seasons Top Image">
+                <IMG src="image/fs/kko/thumb_P1040286_IDC800.jpg"          alt="snap Shots Sky in the Sky Top Image">
+                <IMG src="image/fs/kko/thumb_SW_P1040919.jpg"              alt="snap Shots Sea World Top Image">
+                <IMG src="image/omihosan/thumb_suiboku_gondola.jpg"        alt="snap Shots Suiboku-ga Top Image">
+            </div>
+        </div>
+        <div class="three-col" >
+            <div class="col_lower_rl" > <!-- left side -->
+                <p class="border-ccc">
+                    FLT. SIM.
+                </p>
+            </div>
+            <div class="col_lower_c" >
+                <p class="">
+                </p>
+            </div>
+            <div class="col_lower_rl" > <!-- right side -->
+                <p class="border-ccc">
+                    PHOTO
+                </p>
+            </div>
+        </div>
 
-            <div class="grid2a">
-                <div class="grid-item">
+        <div class="grid2a">
+            <div class="grid-item1">
                     <p id="index_logo" >
                         <IMG src="favicon.ico">
                     </p>
-                </div>
-                <div class="grid-item">
-                    <p id="index_date" >
-                        Last Update 2025/03/26
-                    </p>
-                    <p id="about_Contral">
-                        <span style="padding-right: 5px">about Contral </span>
-                        <a href="e_fs01_about.html" class="tdn"><span style="font-weight: bold;">eng</span></a>
-                        <a href="fs01_about.html" class="tdn"><span style="font-weight: bold;">jpn</span></a>
-                    </p>
-                    <p id="index_copyright" >
-                        copyright &copy; 2003-
-                        <script type="text/javascript" language="JavaScript">
-                            date = new Date();
-                            document.write(date.getFullYear() + ' ');
-                        </script>
-                        <nonscript>
-                        </nonscript>
-                        <BR>
-                        Contrail -kotan- all rights reserved
-                    </p>
-                </div>
             </div>
-        </div> <!-- table right: end -->
+            <div class="grid-item2">
+                <p id="index_date" >
+                    Last Update 2025/03/26
+                </p>
+                <p id="about_Contral">
+                    <span style="padding-right: 5px">about Contral </span>
+                    <a href="e_fs01_about.html" class="tdn"><span style="font-weight: bold;">eng</span></a>
+                    <a href="fs01_about.html" class="tdn"><span style="font-weight: bold;">jpn</span></a>
+                </p>
+                <p id="index_copyright" >
+                    copyright &copy; 2003-
+                    <script type="text/javascript" language="JavaScript">
+                        date = new Date();
+                        document.write(date.getFullYear() + ' ');
+                    </script>
+                    <nonscript>
+                    </nonscript>
+                    <BR>
+                    Contrail -kotan- all rights reserved
+                </p>
+            </div>
+        </div>
 
     </div>
 
