index.html fixed

--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
     const isMobile = /iPhone|iPad|iPod|Android/i.test(ua);
 
     if (isMobile) {
-      window.location.href = "index_s.html";
+      window.location.href = "pc_sp/index_sp.html";
     } else {
-      window.location.href = "index_p.html";
+      window.location.href = "pc_sp/index_pc.html";
     }
   </script>
 </head>
 <body>
   <noscript>
     JavaScriptが無効になっています。<br>
-    <a href="index_p.html">PC向けページはこちら</a><br>
-    <a href="index_s.html">スマホ向けページはこちら</a>
+    <a href="pc_sp/index_pc.html">for PC pages</a><br>
+    <a href="pc_sp/index_sp.html">for SmartPhone</a>
   </noscript>
 </body>
 </html>
