--- a/pc_sp/index_sp.html
+++ b/pc_sp/index_sp.html
@@ -11,11 +11,11 @@
     <title>Contrail</title>
 
     <!-- favicon -->
-    <link rel="shortcut icon" href="favicon.ico">
+    <link rel="shortcut icon" href="../favicon.ico">
 
     <!-- css start -->
         <!-- kko_etc start -->
-        <link rel="stylesheet" href="kko_index_style_s.css">
+        <link rel="stylesheet" href="../libs/etc/css/kko_index_style_s.css">
         <!-- kko_etc end -->
     <!-- css end -->
 
@@ -27,7 +27,7 @@
             <!--<script src="jq_kko_style.js"></script>-->
 
             <!-- jquery.cycle start - random image change, effects -->
-            <script src="libs/jQuery/cycle/js/jquery.cycle.all.js"></script>
+            <script src="../libs/jQuery/cycle/js/jquery.cycle.all.js"></script>
             <script>
             $(window).load(function() {
                 // run the code in the markup!
@@ -50,8 +50,8 @@
         <!--<div id="table_left">--> <!-- table left: start -->
         <div>
             <p id="main_title">
-                <!--<IMG src="image/top/kko_Top_Logo.gif" width="245" height="50" border="0" alt="Contrail Page">-->
-                <IMG src="image/top/Contrail_f.png" width="64%" height="32%" border="0" alt="CONTRAIL">
+                <!--<IMG src="../image/top/kko_Top_Logo.gif" width="245" height="50" border="0" alt="Contrail Page">-->
+                <IMG src="../image/top/Contrail_f.png" width="64%" height="32%" border="0" alt="CONTRAIL">
             </p>
 
             <p id="index_title" >
@@ -68,8 +68,8 @@
                         <ul class="nav-ul"> <!-- navigation English: start -->
                             <li>
                                 <div class="nav-left">
-                                    <a href="e_whatnew.html" >
-                                        <IMG class="nav-left-img" src="image/top/en_what_off.gif" width="100" border="0" alt="What's New" >
+                                    <a href="../e_whatnew.html" >
+                                        <IMG class="nav-left-img" src="../image/top/en_what_off.gif" width="100" border="0" alt="What's New" >
                                     </a>
                                 </div>
                                 <div class="nav-right-s"></div>
@@ -77,32 +77,32 @@
                             </li>
                             <li>
                                 <div class="nav-left">
-                                    <a href="e_link01.html" >
-                                        <IMG class="nav-left-img" src="image/top/en_link_off.gif" width="100" border="0" alt="Links" >
+                                    <a href="../e_link01.html" >
+                                        <IMG class="nav-left-img" src="../image/top/en_link_off.gif" width="100" border="0" alt="Links" >
                                     </a>
                                 </div>
-                                <!-- <div class="nav-right-s"><IMG class="nav-right-img" src="image/button/new_b.gif" width="52" height="13" ></div> -->
-                                <!-- <div class="nav-right-s"><IMG class="nav-right-img" src="image/button/update.gif" width="52" height="13" ></div> -->
+                                <!-- <div class="nav-right-s"><IMG class="nav-right-img" src="../image/button/new_b.gif" width="30px"></div> -->
+                                <!-- <div class="nav-right-s"><IMG class="nav-right-img" "../image/button/update.gif" width="42"></div> -->
                                 <div class="c-both"></div>
                             </li>
                             <li>
                                 <div class="nav-left">
-                                    <a href="en_etc.html" >
-                                        <IMG class="nav-left-img" src="image/top/jp_etc_off.gif" width="100" border="0" alt="etc." >
+                                    <a href="../en_etc.html" >
+                                        <IMG class="nav-left-img" src="../image/top/jp_etc_off.gif" width="100" border="0" alt="etc." >
                                     </a>
                                 </div>
-                                <!--<div class="nav-right-s"><IMG class="nav-right-img" src="image/button/new_b.gif" width="36px"></div>-->
-                                <div class="nav-right-s"><IMG class="nav-right-img" src="image/button/update.gif" width="42"></div>
+                                <div class="nav-right-s"><IMG class="nav-right-img" src="../image/button/new_b.gif" width="30px"></div>
+                                <!--<div class="nav-right-s"><IMG class="nav-right-img" src="../image/button/update.gif" width="42"></div>-->
                                 <div class="c-both"></div>
                             </li>
                             <li>
                                 <div class="nav-left">
-                                    <a href="e_fs01.html" >
-                                            <IMG class="nav-left-img" src="image/top/en_scenery_off.gif" width="100" border="0" alt="The Scenery" >
+                                    <a href="../e_fs01.html" >
+                                            <IMG class="nav-left-img" src="../image/top/en_scenery_off2.gif" width="100" border="0" alt="The Scenery" >
                                     </a>
                                 </div>
-                                <!-- <div class="nav-right-m"><IMG class="nav-right-img" src="image/button/new_b.gif" width="52" height="13" ></div> -->
-                                <!-- <div class="nav-right-m"><IMG class="nav-right-img" src="image/button/update.gif" width="52" height="13" ></div> -->
+                                <!-- <div class="nav-right-m"><IMG class="nav-right-img" src="../image/button/new_b.gif" width="30px"></div> -->
+                                <!-- <div class="nav-right-m"><IMG class="nav-right-img" "../image/button/update.gif" width="42"></div> -->
                                 <div class="c-both"></div>
                             </li>
                         </ul> <!-- navigation English: end -->
@@ -117,8 +117,8 @@
                         <ul class="nav-ul"> <!-- navigation Japanese: start -->
                             <li>
                                 <div class="nav-left">
-                                    <a href="whatnew.html" >
-                                        <IMG class="nav-left-img" src="image/top/en_what_off.gif" width="100" border="0" alt="What's New" >
+                                    <a href="../whatnew.html" >
+                                        <IMG class="nav-left-img" src="../image/top/en_what_off.gif" width="100" border="0" alt="What's New" >
                                     </a>
                                 </div>
                                 <div class="nav-right-s"></div>
@@ -126,32 +126,32 @@
                             </li>
                             <li>
                                 <div class="nav-left">
-                                    <a href="link01.html" >
-                                        <IMG class="nav-left-img" src="image/top/jp_link_off.gif" width="100" border="0" alt="リンク" >
+                                    <a href="../link01.html" >
+                                        <IMG class="nav-left-img" src="../image/top/jp_link_off.gif" width="100" border="0" alt="リンク" >
                                     </a>
                                 </div>
-                                <!-- <div class="nav-right-s"><IMG class="nav-right-img" src="image/button/new_b.gif" width="52" height="13" ></div> -->
-                                <!-- <div class="nav-right-s"><IMG class="nav-right-img" src="image/button/update.gif" width="52" height="13" ></div> -->
+                                <!-- <div class="nav-right-s"><IMG class="nav-right-img" src="../image/button/new_b.gif" width="30px"></div> -->
+                                <!-- <div class="nav-right-s"><IMG class="nav-right-img" "../image/button/update.gif" width="42"></div> -->
                                 <div class="c-both"></div>
                             </li>
                             <li>
                                 <div class="nav-left">
-                                    <a href="etc.html" >
-                                        <IMG class="nav-left-img" src="image/top/jp_etc_off.gif" width="100" border="0" alt="etc." >
+                                    <a href="../etc.html" >
+                                        <IMG class="nav-left-img" src="../image/top/jp_etc_off.gif" width="100" border="0" alt="etc." >
                                     </a>
                                 </div>
-                                <!-- <div class="nav-right-s"><IMG class="nav-right-img" src="image/button/new_b.gif" width="42" height="13" ></div> -->
-                                <div class="nav-right-s"><IMG class="nav-right-img" src="image/button/update.gif" width="42"></div>
+                                <div class="nav-right-s"><IMG class="nav-right-img" src="../image/button/new_b.gif" width="30"></div>
+                                <!--<div class="nav-right-s"><IMG class="nav-right-img" src="../image/button/update.gif" width="42"></div>-->
                                 <div class="c-both"></div>
                             </li>
                             <li>
                                 <div class="nav-left">
-                                    <a href="fs01.html" >
-                                        <IMG class="nav-left-img" src="image/top/en_scenery_off.gif" width="100" border="0" alt="The Scenery" >
+                                    <a href="../fs01.html" >
+                                        <IMG class="nav-left-img" src="../image/top/en_scenery_off2.gif" width="100" border="0" alt="The Scenery" >
                                     </a>
                                 </div>
-                                <!-- <div class="nav-right-m"><IMG class="nav-right-img" src="image/button/new_b.gif" width="52" height="13" ></div> -->
-                                <!-- <div class="nav-right-m"><IMG class="nav-right-img" src="image/button/update.gif" width="52" height="13" ></div> -->
+                                <!-- <div class="nav-right-m"><IMG class="nav-right-img" src="../image/button/new_b.gif" width="30px"></div> -->
+                                <!-- <div class="nav-right-m"><IMG class="nav-right-img" "../image/button/update.gif" width="42"></div> -->
                                 <div class="c-both"></div>
                             </li>
                         </ul> <!-- navigation Japanese: end -->
@@ -164,15 +164,15 @@
 
         <!--<div id="table_right">--> <!-- table right: start -->
         <p id="main_pic">
-            <IMG src="image/top/kko_Top_Image_spring_crop.jpg" width="320px" border="0" alt="Contrail Page TOP PICTURE">
-            <!-- <IMG src="image/top/kko_Top_Image_summer_crop.jpg" width="512" height="384" border="0" alt="Contrail Page TOP PICTURE"> -->
-            <!-- <IMG src="image/top/kko_Top_Image_aki_crop.jpg"    width="512" height="359" border="0" alt="Contrail Page TOP PICTURE"> -->
-            <!-- <IMG src="image/top/kko_Top_Image_Xmas_crop.jpg"   width="512" height="384" border="0" alt="Contrail Page TOP PICTURE"> -->
-            <!-- <IMG src="image/top/kko_Top_Image_winter_crop.jpg" width="512" height="384" border="0" alt="Contrail Page TOP PICTURE"> -->
-            <!-- <IMG src="image/top/kko_Top_Image_D51_crop.jpg"    width="512" height="384" border="0" alt="Contrail Page TOP PICTURE"> -->
-            <!-- <IMG src="image/top/TuamotuCompletion1.jpg"       width="512" height="384" border="0" alt="Contrail Page TOP PICTURE"> -->
-            <!-- <IMG src="image/top/TuamotuCompletion2.jpg"       width="512" height="384" border="0" alt="Contrail Page TOP PICTURE"> -->
-            <!-- <IMG src="image/top/FSX-SWIJ_512.jpg"             width="512" height="370" border="0" alt="Contrail Page TOP PICTURE"> -->
+            <IMG src="../image/top/kko_Top_Image_spring_crop.jpg" width="320px" border="0" alt="Contrail Page TOP PICTURE">
+            <!-- <IMG src="../image/top/kko_Top_Image_summer_crop.jpg" width="512" height="384" border="0" alt="Contrail Page TOP PICTURE"> -->
+            <!-- <IMG src="../image/top/kko_Top_Image_aki_crop.jpg"    width="512" height="359" border="0" alt="Contrail Page TOP PICTURE"> -->
+            <!-- <IMG src="../image/top/kko_Top_Image_Xmas_crop.jpg"   width="512" height="384" border="0" alt="Contrail Page TOP PICTURE"> -->
+            <!-- <IMG src="../image/top/kko_Top_Image_winter_crop.jpg" width="512" height="384" border="0" alt="Contrail Page TOP PICTURE"> -->
+            <!-- <IMG src="../image/top/kko_Top_Image_D51_crop.jpg"    width="512" height="384" border="0" alt="Contrail Page TOP PICTURE"> -->
+            <!-- <IMG src="../image/top/TuamotuCompletion1.jpg"       width="512" height="384" border="0" alt="Contrail Page TOP PICTURE"> -->
+            <!-- <IMG src="../image/top/TuamotuCompletion2.jpg"       width="512" height="384" border="0" alt="Contrail Page TOP PICTURE"> -->
+            <!-- <IMG src="../image/top/FSX-SWIJ_512.jpg"             width="512" height="370" border="0" alt="Contrail Page TOP PICTURE"> -->
             <!-- comment -->
             <!-- <B>South Weat Islands in Japan for Flight Simulator X, now preparing...</B> -->
             <!-- only this time -->
@@ -185,26 +185,26 @@
         <div class="three-col" >
             <div id="s3" class="col_upper_rl pics" > <!-- left side -->
                 <!-- jQuery cycle -->
-                <IMG src="image/fs/rangiroa/thumb_Rangiroa2004_03c.jpg"          alt="Screen Shots Top Image">
-                <IMG src="image/fs/tuamotu/thumb_tuamotu_b_Anaa_SC01.jpg"        alt="Screen Shots Tuamotu 2005 Top Image">
-                <IMG src="image/fs/butterfly/thumb_ButterflySC01.jpg"            alt="Screen Shots Butterfly 2004 Top Image">
-                <IMG src="image/fs/aqua/TBS2k5.jpg"                              alt="Screen Shots Tokyo Bay 2005 Top Image">
-                <IMG src="image/fs/midway/thumb_Midway2004.jpg"                  alt="Screen Shots Midway 2004 Top Image">
-                <IMG src="image/fs/ss/thumb_Adriano_0.jpg"                       alt="Screen Shots Adriano Top Image">
-                <IMG src="image/fs/leeward/thumb_2k4_LeeWard_BoraBora_SC03.jpg"  alt="Screen Shots LeeWard 2004 Top Image">
-                <IMG src="image/fs/swijx/thumb/13_Kume04_1268_256.jpg"           alt="Screen Shots SWIJX Top Image">
+                <IMG src="../image/fs/rangiroa/thumb_Rangiroa2004_03c.jpg"          alt="Screen Shots Top Image">
+                <IMG src="../image/fs/tuamotu/thumb_tuamotu_b_Anaa_SC01.jpg"        alt="Screen Shots Tuamotu 2005 Top Image">
+                <IMG src="../image/fs/butterfly/thumb_ButterflySC01.jpg"            alt="Screen Shots Butterfly 2004 Top Image">
+                <IMG src="../image/fs/aqua/TBS2k5.jpg"                              alt="Screen Shots Tokyo Bay 2005 Top Image">
+                <IMG src="../image/fs/midway/thumb_Midway2004.jpg"                  alt="Screen Shots Midway 2004 Top Image">
+                <IMG src="../image/fs/ss/thumb_Adriano_0.jpg"                       alt="Screen Shots Adriano Top Image">
+                <IMG src="../image/fs/leeward/thumb_2k4_LeeWard_BoraBora_SC03.jpg"  alt="Screen Shots LeeWard 2004 Top Image">
+                <IMG src="../image/fs/swijx/thumb/13_Kume04_1268_256.jpg"           alt="Screen Shots SWIJX Top Image">
             </div>
             <div class="col_upper_c" >
                 GALLERY
             </div>
             <div id="s4" class="col_upper_rl pics" > <!-- right side -->
                 <!-- jQuery cycle -->
-                <IMG src="image/fs/ss/thumb_YOSEMITE11.jpg"                alt="snap Shots Top Image">
-                <IMG src="image/fs/kko/thumb_Rangiroa_03_yuubin_post.jpg"  alt="snap Shots Ufufu Top image">
-                <IMG src="image/fs/kko/thumb_4seasons01.jpg"               alt="snap Shots 4seasons Top Image">
-                <IMG src="image/fs/kko/thumb_P1040286_IDC800.jpg"          alt="snap Shots Sky in the Sky Top Image">
-                <IMG src="image/fs/kko/thumb_SW_P1040919.jpg"              alt="snap Shots Sea World Top Image">
-                <IMG src="image/omihosan/thumb_suiboku_gondola.jpg"        alt="snap Shots Suiboku-ga Top Image">
+                <IMG src="../image/fs/ss/thumb_YOSEMITE11.jpg"                alt="snap Shots Top Image">
+                <IMG src="../image/fs/kko/thumb_Rangiroa_03_yuubin_post.jpg"  alt="snap Shots Ufufu Top image">
+                <IMG src="../image/fs/kko/thumb_4seasons01.jpg"               alt="snap Shots 4seasons Top Image">
+                <IMG src="../image/fs/kko/thumb_P1040286_IDC800.jpg"          alt="snap Shots Sky in the Sky Top Image">
+                <IMG src="../image/fs/kko/thumb_SW_P1040919.jpg"              alt="snap Shots Sea World Top Image">
+                <IMG src="../image/omihosan/thumb_suiboku_gondola.jpg"        alt="snap Shots Suiboku-ga Top Image">
             </div>
         </div>
         <div class="three-col" >
@@ -227,7 +227,7 @@
         <div class="grid2a">
             <div class="grid-item1">
                     <p id="index_logo" >
-                        <IMG src="favicon.ico">
+                        <IMG src="../favicon.ico">
                     </p>
             </div>
             <div class="grid-item2">
@@ -236,8 +236,8 @@
                 </p>
                 <p id="about_Contral">
                     <span style="padding-right: 5px">about Contral </span>
-                    <a href="e_fs01_about.html" class="tdn"><span style="font-weight: bold;">eng</span></a>
-                    <a href="fs01_about.html" class="tdn"><span style="font-weight: bold;">jpn</span></a>
+                    <a href="../e_fs01_about.html" class="tdn"><span style="font-weight: bold;">eng</span></a>
+                    <a href="../fs01_about.html" class="tdn"><span style="font-weight: bold;">jpn</span></a>
                 </p>
                 <p id="index_copyright" >
                     copyright &copy; 2003-
